# odx-rs

./: Cargo.toml  LICENSE-MRTRIX  LICENSE-NIBABEL  README.md  SPECIFICATION.md
assets/: dsistudio_odf8_faces.txt  dsistudio_odf8_vertices.txt
benches/: dsistudio_io.rs
docs/: cli.md  dsistudio_mrtrix_conversion_workflows.md  fixel_qc.md
examples/: convert_dsistudio.rs  convert_mrtrix_to_fz.rs
src/: cli_support.rs  compare.rs  data_array.rs  descoteaux_sh.rs  dtype.rs  error.rs  header.rs  interop.rs  lib.rs  mmap_backing.rs  mrtrix_sh.rs  nifti_canon.rs  odx_file.rs  peak_finder.rs  qc.rs  reference_affine.rs  sh_basis_evaluator.rs  stream.rs  typed_view.rs  validate.rs
src/formats/: dsistudio.rs  dsistudio_odf8.rs  mat4.rs  mif.rs  mod.rs  mrtrix.rs  pam.rs  pyafq_aodf.rs  tortoise_mapmri.rs
src/io/: archive_edit.rs  directory.rs  filename.rs  mod.rs  zip.rs
tests/: archive_mutation.rs  cli.rs  fibgz_round_trip.rs  interop.rs  mif_reader.rs  mrtrix_io.rs  pam_io.rs  qc.rs  round_trip.rs
