[package]
name = "odx-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["pam5"]
pam5 = ["dep:hdf5-metno"]

[dependencies]
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
nifti = "0.17"
ndarray = "0.16"
nalgebra = "0.33"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
hdf5-metno = { version = "0.12.4", optional = true, default-features = false, features = ["static", "zlib"] }

[dev-dependencies]
assert_cmd = "2"
criterion = "0.5"
predicates = "3"

[[bench]]
name = "dsistudio_io"
harness = false
